--- a/nyc/nyc.css
+++ b/nyc/nyc.css
@@ -242,7 +242,7 @@
 
 .nyc-logos img:hover {
   opacity: 1;
-  filter: invert(1) brightness(2);
+  filter: none;
 }
 
 /* ---------- CTA ---------- */
