--- a/kevinos/kevinos.css
+++ b/kevinos/kevinos.css
@@ -3076,6 +3076,11 @@ body {
     text-decoration: underline;
 }
 
+.share-divider {
+    margin: 0 6px;
+    color: #666677;
+}
+
 .game-btn-link {
     background: transparent;
     border: none;
